<resources>
    <string name="app_name">Test</string>
    <string name="text">0</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="bs">BS</string>
    <string name="slash">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dash">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">+</string>
    <string name="add_minus">+/-</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="select">Select</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="agree">I agree to Terms of Use</string>
    <string name="register">Register</string>
    <string name="error_divide_by_zero">ERROR</string>
</resources>