<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    tools:context=".MainActivity">

    <!-- TextView hiển thị biểu thức đang tính -->
    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:textColor="#666666"
        android:textSize="24sp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- TextView hiển thị số hiện tại -->
    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end|bottom"
        android:maxLines="1"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/text"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/tvExpression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.26" />

    <!-- Flow layout các nút tính -->
    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:flow_wrapMode="chain"
        app:flow_horizontalStyle="spread"
        app:flow_verticalStyle="spread"
        app:flow_maxElementsWrap="4"
        app:constraint_referenced_ids="
            btnCE, btnC, btnBS, btnDivide,
            btn7, btn8, btn9, btnMultiply,
            btn4, btn5, btn6, btnSubtract,
            btn1, btn2, btn3, btnAdd,
            btnPlusMinus, btn0, btnDot, btnEquals"
        />
    <!-- View các button -->
    <Button
        android:id="@+id/btnCE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/ce"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/c"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnBS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/bs"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/slash"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_7"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_8"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_9"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/x"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_4"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_5"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_6"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/dash"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_1"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_2"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_3"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/add"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnPlusMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/add_minus"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btn0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/_0"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFFFFF"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/dot"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:backgroundTint="#C7C3C3"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/equal"
        android:textColor="#333333"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>